[gd_scene load_steps=11 format=3 uid="uid://cfm1jrpt34jnu"]

[ext_resource type="Script" uid="uid://e2yl5xi3fxlw" path="res://scripts/water.gd" id="1_f1640"]
[ext_resource type="Texture2D" uid="uid://dbk0oq6jsuuph" path="res://sprites/water_gota/Projectile_Bubble (8 x 8).png" id="1_n361b"]
[ext_resource type="Texture2D" uid="uid://qxnsrkbfptd4" path="res://sprites/water_gota/Projectile_Explosion (8 x 8).png" id="3_v5bw3"]
[ext_resource type="AudioStream" uid="uid://7vjsn1g4uywm" path="res://sounds/water_collect.mp3" id="4_v5bw3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_l1ifp"]
radius = 5.0

[sub_resource type="AtlasTexture" id="AtlasTexture_f1640"]
atlas = ExtResource("1_n361b")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5bw3"]
atlas = ExtResource("1_n361b")
region = Rect2(8, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_jqrbq"]
atlas = ExtResource("3_v5bw3")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_8c2o7"]
atlas = ExtResource("3_v5bw3")
region = Rect2(8, 0, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_jqrbq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1640")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5bw3")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jqrbq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8c2o7")
}],
"loop": false,
"name": &"sumir",
"speed": 5.0
}]

[node name="water" type="Area2D"]
collision_layer = 16
collision_mask = 2
script = ExtResource("1_f1640")

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_l1ifp")

[node name="anima" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_jqrbq")
animation = &"idle"
autoplay = "idle"
frame = 1
frame_progress = 0.9263524

[node name="water_collect_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_v5bw3")
volume_db = -11.137
pitch_scale = 1.33

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="anima" to="." method="_on_anima_animation_finished"]
